Use fontsource to bundle fonts files (no API request) Fix brand icon shift in Safari Adjust the base and main css structure Remove responsive box shadow on the main section

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,8 @@
 @use 'sass:color';
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap');
+@import '@fontsource/noto-sans/400.css';
+@import '@fontsource/noto-sans/600.css';
+@import '@fontsource/noto-sans/700.css';
+@import '@fontsource/play/700.css';
 
 // SCSS constants
 
@@ -52,65 +54,3 @@ $ColorLinearHeadingWarm: linear-gradient(
 $ColorBorder: $ColorGreige;
 $ColorTextCool: $ColorDeepAmethyst;
 $ColorTextWarm: $ColorGreige;
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: unset;
-}
-a {
-  cursor: unset;
-  display: block;
-  color: unset;
-  text-decoration: unset;
-}
-body {
-  font-family:
-    'Noto Sans',
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Inter,
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  height: 100vh;
-  height: 100dvh;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-button {
-  cursor: unset;
-  color: unset;
-  line-height: unset;
-  display: block;
-  text-align: center;
-  align-items: unset;
-  background-color: unset;
-}
-blockquote,
-button,
-dl,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-pre,
-ol,
-table,
-ul {
-  border: unset;
-  margin: unset;
-  padding: unset;
-}
